fix: truncate featured article title and excerpt

--- a/src/components/Blog/FeaturedPost/styles.module.css
+++ b/src/components/Blog/FeaturedPost/styles.module.css
@@ -39,6 +39,11 @@
 .title,
 .excerpt {
   margin-top: 16px;
+  overflow: hidden;
+  display: -webkit-box;
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .title a {
