--- a/src/components/Governance/Delegates/styles.module.css
+++ b/src/components/Governance/Delegates/styles.module.css
@@ -25,6 +25,7 @@
 .name {
   overflow: hidden;
   display: -webkit-box;
+  line-clamp: 1;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
 }
@@ -32,6 +33,7 @@
 .description {
   overflow: hidden;
   display: -webkit-box;
+  line-clamp: 2;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
